--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,13 @@ jobs:
   cypress-run:
     runs-on: ubuntu-24.04
     steps:
-      
-name: Checkout
-      uses: actions/checkout@v4# Install npm dependencies, cache them correctly# and run all Cypress tests
-name: Cypress run
-    uses: cypress-io/github-action@v6
-    with:
-      browser: chrome
-      headed: true
+      - name: Checkout
+        uses: actions/checkout@v4
+        
+      # Install npm dependencies, cache them correctly
+      # and run all Cypress tests
+      - name: Cypress run
+        uses: cypress-io/github-action@v6
+        with:
+          browser: chrome
+          headed: true
