--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,54 @@
-name: cypress-ci
-on: push
+name: Cypress Tests
+on: 
+  push:
+    branches: [ main, master, develop ]
+  pull_request:
+    branches: [ main, master, develop ]
+
 jobs:
   cypress-run:
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
-      # Install npm dependencies, cache them correctly
-      # and run all Cypress tests
-      - name: Cypress run
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Debug - List files
+        run: ls -la
+      
+      - name: Debug - List Cypress tests
+        run: find cypress -name "*.cy.js" -o -name "*.cy.ts" | sort
+      
+      - name: Start server and run Cypress tests
         uses: cypress-io/github-action@v6
         with:
+          start: npm run start
+          wait-on: 'http://localhost:3000'
+          wait-on-timeout: 180
           browser: chrome
-          headed: true
+          record: false
+          config-file: cypress.config.js
+      
+      - name: Upload Cypress screenshots if tests fail
+        uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
+          if-no-files-found: ignore
+      
+      - name: Upload Cypress videos
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: cypress-videos
+          path: cypress/videos
+          if-no-files-found: ignore
